# clavi

./: .clang-format  .clinerules  .editorconfig  .gitignore  .gitmodules  .windsurfrules  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.cursor/rules/: android.mdc  project.mdc
.github/: copilot-instructions.md
.github/workflows/: android.yml  ci.yml  fuzz.yml  release.yml
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/predict/: uk.tsv
android/app/src/main/java/com/clavi/keyboard/: ClaviIME.kt  ClaviKeyboardView.kt  ClipboardHistory.kt  DiacriticsEngine.kt  EmojiData.kt  EmojiPanel.kt  KeyboardLayout.kt  SettingsActivity.kt  SpellEngine.kt  TextFixEngine.kt  TranslationEngine.kt  TranslitEngine.kt  WordPredictionEngine.kt
android/app/src/main/res/drawable/: ic_keyboard.xml
android/app/src/main/res/layout/: keyboard_view.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/values-uk/: strings.xml
android/app/src/main/res/xml/: method.xml
core/: CMakeLists.txt
core/include/clavi/: config.hpp  detector.hpp  dictionary.hpp  layout_map.hpp  logger.hpp  ngram_model.hpp  pack_loader.hpp  text_fix_engine.hpp  translit.hpp  undo_stack.hpp  utf8_utils.hpp
core/src/: config.cpp  detector.cpp  dictionary.cpp  layout_map.cpp  logger.cpp  ngram_model.cpp  pack_loader.cpp  text_fix_engine.cpp  translit.cpp  undo_stack.cpp
daemon/: CMakeLists.txt
daemon/include/clavi/: hook.hpp  version.hpp  word_buffer.hpp
daemon/include/clavi/platform/: switcher.hpp  toast.hpp  tray.hpp
daemon/src/: hook.cpp  main.cpp  word_buffer.cpp
daemon/src/platform/: switcher_linux.cpp  switcher_mac.cpp  switcher_win.cpp  toast_linux.cpp  toast_mac.cpp  toast_win.cpp  tray_linux.cpp  tray_mac.cpp  tray_win.cpp
data/keyboard_maps/: en_qwerty.json  uk_qwerty.json
deploy/linux/: clavi.service
deploy/macos/: dev.clavi.daemon.plist
deploy/windows/: clavi-service.xml
docs/: CNAME  config-example.toml  i18n.js  index.html  style.css
fuzz/: CMakeLists.txt  fuzz_detector.cpp  fuzz_layout_map.cpp  fuzz_ngram_model.cpp
ios/: README.md
ios/ClaviKeyboard/ClaviKeyboard/: AppDelegate.swift  SettingsViewController.swift
ios/ClaviKeyboard/ClaviKeyboardExtension/: ClaviKeyboardView.swift  ClipboardHistory.swift  DiacriticsEngine.swift  EmojiData.swift  EmojiPanel.swift  Fnv1a.swift  Info.plist  KeyboardLayout.swift  KeyboardViewController.swift  SpellEngine.swift  TextFixEngine.swift  TranslationEngine.swift  TranslitEngine.swift  WordPredictionEngine.swift
ios/ClaviKeyboard/ClaviKeyboardExtension/Resources/emoji/: emoji.tsv
ios/ClaviKeyboard/ClaviKeyboardExtension/Resources/predict/: en.tsv
ios/ClaviKeyboard/ClaviKeyboardExtension/Resources/translate/: en-uk.tsv  uk-en.tsv
packs/: LICENSE
packs/en/: pack.toml
packs/uk/: pack.toml  translit.toml
tests/: CMakeLists.txt
tests/integration/: test_detector_e2e.cpp  test_translit_kmu.cpp
tests/unit/: test_config.cpp  test_detector.cpp  test_dictionary.cpp  test_layout_map.cpp  test_logger.cpp  test_ngram_model.cpp  test_pack_loader.cpp  test_text_fix_engine.cpp  test_translit.cpp  test_undo_stack.cpp  test_word_buffer.cpp
tools/: build_dict.py  build_keymap.py  build_ngram.py  build_spell_dict.py  download_wordlists.py  requirements.txt
website/: index.html  style.css
